--- a/system_wrappers/BUILD.gn
+++ b/system_wrappers/BUILD.gn
@@ -105,6 +105,7 @@ rtc_library("metrics") {
   }
   deps = [
     "../rtc_base:checks",
+    "../rtc_base:logging",
     "../rtc_base:rtc_base_approved",
   ]
 }
